[package]
name = "mobileconf"
version = "0.1.0"
authors = ["Adam Sandberg Ericsson <adam@sandbergericsson.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.30", path = "./rust-openssl/openssl" }
structopt = "0.3.21"
