[package]
name = "mobileconf"
version = "0.1.0"
authors = ["Adam Sandberg Ericsson <adam@sandbergericsson.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { git = "https://github.com/sfackler/rust-openssl" }
structopt = "0.3.21"
plist = "1"
base64 = "0.13.0"
apply = "0.3.0"
